[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures_&_sprites/evil_me_big.png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1840.76, -0.431427, 190.145, -0.71668, -190.145, 0.71668, 1376.63, -0.42984, -185.029, -0.357171, 185.029, 0.357171, 1377.37, 252.477, 187.897, 2.46312, -187.897, -2.46312, 1376.63, -0.42984, 0, 0, 0, 0, -133.049, -0.593292 )
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.1267
height = 111.71

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )
speed = 350

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1843.27, -1.95788 )
rotation = 0.00249767
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 1840.76, -0.431427 )
rotation = -3.1391

[node name="EnemyArea" type="Area2D" parent="EnemyPath/PathFollow2D" groups=[
"Enemies",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPath/PathFollow2D/EnemyArea"]
position = Vector2( 0.732666, -1.53269 )
shape = SubResource( 2 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 1.4
[connection signal="area_shape_entered" from="EnemyPath/PathFollow2D/EnemyArea" to="." method="_on_self_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
